got eye tracking working in fitts_task_tobii node

--- a/ros2_ws/src/cpp_pubsub/CMakeLists.txt
+++ b/ros2_ws/src/cpp_pubsub/CMakeLists.txt
@@ -87,8 +87,9 @@ ament_python_install_package(${PROJECT_NAME})
 # Install Python executables
 install(PROGRAMS
 
-  scripts/traj_recorder.py
+  # scripts/traj_recorder.py
   scripts/fitts_task.py
+  scripts/fitts_task_tobii.py
 
   DESTINATION lib/${PROJECT_NAME}
 )
